fixed horizontal scroll and page4 responsiveness

--- a/project1/style.css
+++ b/project1/style.css
@@ -18,6 +18,7 @@ body {
     position: relative;
     background-color: #F8F8F8;
     padding-top: 0.1px;
+    overflow-x: hidden;
 }
 
 #nav {
@@ -376,8 +377,8 @@ body {
 
 #page4 {
     
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     padding: 2vw 10vw;
     
 }
@@ -1049,7 +1050,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position:10% 55%;
+    object-position:top center;
     /* display: block; */
 }
 
